--- a/Docentes/docentes.html
+++ b/Docentes/docentes.html
@@ -18,14 +18,14 @@
                 <img src="img/logo.png" alt="" width="250">
             </div>
             <ul class="menu">
-                <li><a href="/index.html">Inicio</a></li>
+                <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#inicio2">Nosotros</a>
                     <ul class="submenu">
-                        <li><a href="/index.html">Reseña</a></li>
-                        <li><a href="/index.html">Himno</a></li>
-                        <li><a href="/index.html">Visión</a></li>
-                        <li><a href="/index.html">Misión</a></li>
-                        <li><a href="/index.html">Valores</a></li>
+                        <li><a href="#inicio3">Reseña</a></li>
+                        <li><a href="#inicio4">Himno</a></li>
+                        <li><a href="#inicio5">Visión</a></li>
+                        <li><a href="#inicio6">Misión</a></li>
+                        <li><a href="#inicio7">Valores</a></li>
                     </ul>
                 </li>
                 <li><a href="#inicio8">Comunidad</a>
@@ -53,9 +53,13 @@
             </ul>
         </nav>
     </header>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
 
   <section>
-    
+
     <div class="swiper mySwiper container">
       <div class="swiper-wrapper content">
 
