--- a/Talleres/talleres.html
+++ b/Talleres/talleres.html
@@ -16,11 +16,11 @@
     <!-- footer -->
     <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/talleres.css">
-    <link rel="stylesheet" href="/index.html">
 </head>
 
 <body>
     <header>
+        
         <nav class="navegacion">
             <div class="logo">
                 <img src="img/logo.png" alt="" width="250">
@@ -61,6 +61,10 @@
             </ul>
         </nav>
     </header>
+    <div class="docente__titulo" id="inicio30">
+        <h2>Docentes</h2>
+    </div>
+    <hr>
     
     <div class="galeria">
         <h1>TALLERES</h1>
